--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -57,6 +57,7 @@ under the License.
     </style>
     <%= stylesheet_link_tag :screen, media: :screen %>
     <%= stylesheet_link_tag :print, media: :print %>
+    <%= stylesheet_link_tag :styles %>
     <% if current_page.data.search %>
       <%= javascript_include_tag  "all" %>
     <% else %>
