--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -69,6 +69,7 @@ under the License.
       $(function() { setupCodeCopy(); });
     </script>
     <% end %>
+    <%= favicon_tag 'favicon.png' %>
   </head>
 
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
